--- a/gmk.yml
+++ b/gmk.yml
@@ -40,13 +40,18 @@
 
 - git: git@github.com:Epiconcept-Paris/infra-data-ips.git
   name: data-ips
-  version: tde
+  version: master
   conf: thyepi
 
 - git: git@github.com:thydel/infra-ips.git
   name: ips
-  conf: thydel
+  conf: master
   links: data-ips data-misc
+
+- git: git@github.com:Epiconcept-Paris/infra-data-nodes-groups.git
+  name: nodes-groups
+  conf: thyepi
+  version: master
 
 - git: git@github.com:Epiconcept-Paris/infra-data-inventories.git
   name: inventories
